...

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView14"
        android:text="@string/current_quest"
        android:layout_below="@+id/btback"
        android:layout_centerHorizontal="true"
        android:textColor="@color/cast_expanded_controller_progress_text_color" />

    <Button
        android:text="@string/back"
        android:layout_width="wrap_content"
...
